--- a/src/main/resources/templates/admin/admin-hours-edit-menu.html
+++ b/src/main/resources/templates/admin/admin-hours-edit-menu.html
@@ -16,8 +16,8 @@
 </div>
 
 <div class="middle">
-    <div style="overflow-x:auto">
-        <table border="1px">
+
+        <table class="greyGridTable">
             <tr>
                 <th>Id</th>
                 <th>userId</th>
@@ -33,7 +33,7 @@
                 <td><a th:href="@{/admin/editHours(id=${userEntity.id})}" >Edit</a></td>
             </tr>
         </table>
-    </div>
+
 </div>
 <div class="footer"><br>© Katarzyna Matuszewska, Jakub Turek 2019<br></div>
 </body>
