--- a/src/main/resources/templates/admin/admin-hours-view-user.html
+++ b/src/main/resources/templates/admin/admin-hours-view-user.html
@@ -17,7 +17,7 @@
 
 <div class="middle">
 <div style="overflow-x:auto">
-<table border="1px">
+    <table class="greyGridTable">
     <tr>
         <th>Id</th>
         <th>userId</th>
