--- a/src/main/resources/templates/admin/admin-salary-calculation-menu.html
+++ b/src/main/resources/templates/admin/admin-salary-calculation-menu.html
@@ -16,8 +16,8 @@
 
 
 <div class="middle">
-Please choose user to calculate his salary or press button to calculate salary for all users
-(Optionaly: choose users to calculate theirs salaries)
+    <h1 class="h1class">Please choose user to calculate his salary or press button to calculate salary for all users
+        (Optionaly: choose users to calculate theirs salaries)</h1>
 </div>
 
 <div class="footer"><br>© Katarzyna Matuszewska, Jakub Turek 2019<br></div>
