--- a/src/main/resources/templates/user/user-calculate-summary.html
+++ b/src/main/resources/templates/user/user-calculate-summary.html
@@ -15,13 +15,13 @@
 </div>
 
 <div class="middle">
-User Calculate Summary:
+    <h1 class="h1class">User Calculate Summary:</h1>
 <br>
-Hours:
+    <h1 class="h1class">Hours:</h1>
 <br>
 <span th:text="${user.tempHours}"></span>
 <br>
-Salary:
+    <h1 class="h1class">Salary:</h1>
 <br>
 <span th:text="${user.salary} + ' PLN'"></span>
 </div>
