--- a/src/main/resources/templates/user/user-enter-hours.html
+++ b/src/main/resources/templates/user/user-enter-hours.html
@@ -15,7 +15,7 @@
 </div>
 
 <div class="middle">
-Pokazuje formularz do wpisywania godzin usera
+    <h1 class="h1class">Pokazuje formularz do wpisywania godzin usera</h1>
 <form action="addHours" method="post">
     <input type="date" name="date">
     <input placeholder="hours" type="text" name="tempHours">
