--- a/src/main/resources/templates/user/user-view-hours.html
+++ b/src/main/resources/templates/user/user-view-hours.html
@@ -11,12 +11,12 @@
 </div>
 
 <div class="back-to-menu">
-    <<li><a href="/user/user-menu.html" th:href="@{/user/showUserMenu}">Back to menu</a></li>
+    <li><a href="/user/user-menu.html" th:href="@{/user/showUserMenu}">Back to menu</a></li>
 </div>
 
 <div class="middle">
 
-<table border="1px">
+    <table class="greyGridTable">
     <tr>
         <th>Id</th>
         <th>userId</th>
