--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,53 +1,56 @@
 html, body {
-    margin:0px;
-    padding:0px;
-    height:100%;
+    margin: 0px;
+    padding: 0px;
     background-color: #ccffe6;
 }
-.container {
-    min-height:100%;
-    position:relative;
+
+body {
+    min-height: 100%;
+    position: relative;
 }
+
 .header {
-    margin:0px;
-    background:#66ff99;
-    padding:30px;
+    margin: 0px;
+    background: #66ff99;
+    padding: 30px;
     font-family: Calibri;
     font-variant: small-caps;
 }
+
 .back-to-menu {
-    background:#66ff99;
-    padding:0px;
+    background: #66ff99;
+    padding: 0px;
     font-family: Calibri;
     font-variant: small-caps;
-    align: right;
     list-style: none;
     margin: fill;
 }
 
 .middle {
     padding: 20px;
-    padding-bottom:60px; /* Wysokość nagłówka */
+    padding-bottom: 60px; /* Wysokość nagłówka */
     font-family: Calibri;
 }
+
 .footer {
-    position:absolute;
-    bottom:10px;
-    width:100%;
-    height:60px;		/* Wysokość nagłówka */
+    position: fixed;
+    bottom: 0px;
+    width: 100%;
+    height: 60px; /* Wysokość nagłówka */
     background: #66ff99;
     text-align: center;
     font-family: Calibri;
     font-variant: small-caps;
 }
+
 i {
     text-decoration-color: #555;
     font-family: Calibri;
 }
 
 .h1class {
-    padding: 20px;
-    padding-bottom:60px;
+    padding: 5px;
+    padding-bottom: 5px;
     text-align: left;
     color: grey;
     font-family: Calibri;
@@ -94,6 +97,105 @@ a href {
     size: 20px;
     font-family: "Calibri";
 }
-.main-form {
 
+/*greyGridTable tabela podstawowa*/
+table.greyGridTable {
+    font-family: Calibri;
+    border: 2px solid #FFFFFF;
+    background-color: #E1E1E1;
+    width: 80%;
+    height: 90%;
+    text-align: left;
+    border-collapse: collapse;
+    font-variant: small-caps;
+}
+
+table.greyGridTable td, table.greyGridTable th {
+    border: 1px solid #FFFFFF;
+    padding: 3px 4px;
+}
+
+table.greyGridTable tbody td {
+    font-size: 13px;
+}
+
+table.greyGridTable td:nth-child(even) {
+    background: #EBEBEB;
+}
+
+table.greyGridTable thead {
+    background: #FFFFFF;
+    border-bottom: 2px solid #333333;
+}
+
+table.greyGridTable thead th {
+    font-size: 15px;
+    font-weight: bold;
+    color: #333333;
+    text-align: left;
+    border-left: 2px solid #333333;
+}
+
+table.greyGridTable thead th:first-child {
+    border-left: none;
+}
+
+table.greyGridTable tfoot td {
+    font-size: 14px;
+}
+
+/*__________________koniec tablicy w css*/
+
+
+form.main-form input[type=text], input[type=password] {
+    width: 40%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+form.main-form button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: solid;
+    cursor: pointer;
+    width: 30%;
+}
+
+form.main-form button:hover {
+    opacity: 1.8;
+}
+/*_______________________form end*/
+
+form.saveHour input {
+    width: 30%;
+    padding: 10px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+form.saveHour button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 20px;
+    margin: 8px 0;
+    border: solid;
+    cursor: pointer;
+    width: 30%;
+}
+form.saveHour select{
+    width: 30%;
+    padding: 10px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+section {
+    border-bottom: #4CAF50;
 }
