--- a/src/main/resources/templates/admin/admin-salary-calculation-menu.html
+++ b/src/main/resources/templates/admin/admin-salary-calculation-menu.html
@@ -21,8 +21,9 @@
         <br>select user and press 'Calculate One' to calculate his/her salary
         <br>for selected period of time.
     </h1>
-</div>
-<h3>Calculate salaries for all users for selected period of time:</h3>
+    <hr>
+
+<h1 class="h1class">Calculate salaries for all users for selected period of time:</h1>
 <br>
 <form action="showSalaryCalculationFormByTime" method="post" class="saveHour">
     Select by date
@@ -38,7 +39,7 @@
 
 <hr>
 <br>
-<h3>Calculate salary for single user for selected period of time:</h3>
+<h1 class="h1class">Calculate salary for single user for selected period of time:</h1>
 <form action="showSalaryCalculationFormByUser" method="post" class="saveHour">
     Select user
     <br>
@@ -59,6 +60,7 @@
     <br><br>
 </form>
 <br><br>
+</div>
 <div class="footer"><br>© Katarzyna Matuszewska, Jakub Turek 2019<br></div>
 </body>
 </html>
