--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -17,14 +17,17 @@ body {
     font-variant: small-caps;
 }
 
-.back-to-menu {
+
+.back-to-menu{
     background: #66ff99;
     padding: 0px;
     font-family: Calibri;
     font-variant: small-caps;
-    list-style: none;
     margin: fill;
+    overflow: hidden;
+    list-style: none;
 }
+
 
 .middle {
     padding: 20px;
@@ -108,11 +111,13 @@ table.greyGridTable {
     text-align: left;
     border-collapse: collapse;
     font-variant: small-caps;
+    table-layout: fixed;
 }
 
 table.greyGridTable td, table.greyGridTable th {
     border: 1px solid #FFFFFF;
     padding: 3px 4px;
+
 }
 
 table.greyGridTable tbody td {
@@ -134,6 +139,7 @@ table.greyGridTable thead th {
     color: #333333;
     text-align: left;
     border-left: 2px solid #333333;
+    width: 20%;
 }
 
 table.greyGridTable thead th:first-child {
@@ -171,6 +177,12 @@ form.main-form button:hover {
 }
 /*_______________________form end*/
 
+form.saveHour {
+    text-align: left;
+    color: grey;
+    font-family: Calibri;
+    font-size: large;
+}
 form.saveHour input {
     width: 30%;
     padding: 10px 20px;
