Admin controller - redirect changed, html modified.

--- a/src/main/resources/templates/user/user-enter-hours.html
+++ b/src/main/resources/templates/user/user-enter-hours.html
@@ -15,10 +15,11 @@
 </div>
 
 <div class="middle">
-    <h1 class="h1class">Pokazuje formularz do wpisywania godzin usera</h1>
-<form action="addHours" method="post" th:object="${timeEntry}">
-    <input type="date" th:field="*{date}" th:errorClass="error">
-    <input placeholder="hours" type="number" th:field="*{hours}" th:errorClass="error">
+    <h1 class="h1class">Fill form to save hours</h1>
+    <br>
+<form action="addHours" method="post" th:object="${timeEntry}" class="saveHour">
+    <input type="date" th:field="*{date}" th:errorClass="error"><br>
+    <input placeholder="hours" type="number" th:field="*{hours}" th:errorClass="error"><br>
     <button>Save</button>
     <br><br>
     <div th:text="${message}"></div>
