--- a/src/main/resources/templates/admin/admin-hours-edit-menu.html
+++ b/src/main/resources/templates/admin/admin-hours-edit-menu.html
@@ -33,6 +33,8 @@
                 <td><a th:href="@{/admin/editHours(id=${userEntity.id})}" >Edit</a></td>
             </tr>
         </table>
+    <br>
+    <div th:text="${message}" align="center"></div>
 
 </div>
 <div class="footer"><br>© Katarzyna Matuszewska, Jakub Turek 2019<br></div>
