--- a/src/main/resources/templates/admin/admin-menu.html
+++ b/src/main/resources/templates/admin/admin-menu.html
@@ -5,7 +5,7 @@
     <title>Admin Menu</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
 </head>
-
+<div th:replace="fragments/header :: header"></div>
 <body>
 <div class="header">
     Admin menu
