--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -4,6 +4,6 @@
     <meta charset="UTF-8">
 </head>
 <body>
-<div class="footer"><br>© Katarzyna Matuszewska, Jakub Turek 2019<br></div>
+<div th:fragment="footer"><br>© Katarzyna Matuszewska, Jakub Turek 2019<br></div>
 </body>
 </html>
