--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -5,8 +5,8 @@
    </head>
 <body>
 <div th:fragment="header">
-    Welcome
-    <a th:href="@{/logout}">Zakończ sesję</a>
+
+    <a th:href="@{/logout}" >Wyloguj</a>
 </div>
 </body>
 </html>
