--- a/src/main/resources/templates/admin/admin-hours-view-user.html
+++ b/src/main/resources/templates/admin/admin-hours-view-user.html
@@ -5,6 +5,7 @@
     <title>Entered hours of selected user</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
 </head>
+<div th:replace="fragments/header :: header"></div>
 <body>
 <div class="header">
     Entered hours of selected user
