--- a/src/main/resources/templates/admin/admin-user-edit-form.html
+++ b/src/main/resources/templates/admin/admin-user-edit-form.html
@@ -5,6 +5,7 @@
     <title>Edit user menu</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
 </head>
+<div th:replace="fragments/header :: header"></div>
 <body>
 <div class="header">
     Edit user menu
