--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -2,11 +2,13 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <title>Logout</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
    </head>
 <body>
 <div th:fragment="header">
 
-    <a th:href="@{/logout}" >Wyloguj</a>
+    <a th:href="@{/logout}" >Logout</a>
 </div>
 </body>
 </html>
