--- a/src/main/resources/templates/user/user-view-hours.html
+++ b/src/main/resources/templates/user/user-view-hours.html
@@ -5,6 +5,7 @@
     <title>View Hours of the user</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
 </head>
+<div th:replace="fragments/header :: header"></div>
 <body>
 <div class="header">
     View hours of the user
