--- a/src/main/resources/templates/admin/admin-hours-edit-entry.html
+++ b/src/main/resources/templates/admin/admin-hours-edit-entry.html
@@ -5,6 +5,7 @@
     <title>Edit Hour Entry</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
 </head>
+<div th:replace="fragments/header :: header"></div>
 <body>
 <div class="header">
     Edit hour entry
