--- a/src/main/resources/templates/admin/admin-salary-calculation-menu.html
+++ b/src/main/resources/templates/admin/admin-salary-calculation-menu.html
@@ -5,6 +5,7 @@
     <title>Calculate Salary</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
 </head>
+<div th:replace="fragments/header :: header"></div>
 <body>
 <div class="header">
     Salary
