--- a/src/main/resources/templates/user/user-calculate.html
+++ b/src/main/resources/templates/user/user-calculate.html
@@ -5,6 +5,7 @@
     <title>User Calculation Form</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
 </head>
+<div th:replace="fragments/header :: header"></div>
 <body>
 <div class="header">
     Use calculation form
