--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -7,8 +7,8 @@
    </head>
 <body>
 <div th:fragment="header">
-
-    <a th:href="@{/logout}" >Logout</a>
+<button>
+    <a th:href="@{/logout}" >Logout</a></button>
 </div>
 </body>
 </html>
