--- a/src/main/resources/templates/admin/admin-user-edit-form.html
+++ b/src/main/resources/templates/admin/admin-user-edit-form.html
@@ -34,6 +34,7 @@
             </select><br>
             <button>Save</button>
         </form>
+        <div th:text="${message}"></div>
     </div>
 
     <br>
